---
source: crates/syntax/src/grammar/expressions.rs
description: "expr(\n            [\n                for (a = [steps, -1, 0]) if (b) let (c = d) [a, f]\n            ]\n        )"
---
Node(
    LIST_COMPREHENSION_EXPR@0..95
      WHITESPACE@0..13 "\n            "
      L_BRACKET@13..14 "["
      FOR_CLAUSE@14..81
        WHITESPACE@14..31 "\n                "
        FOR_KW@31..34 "for"
        WHITESPACE@34..35 " "
        L_PAREN@35..36 "("
        ASSIGNMENTS@36..54
          ASSIGNMENT@36..54
            IDENT@36..37 "a"
            WHITESPACE@37..38 " "
            EQUALS@38..39 "="
            LIST_EXPR@39..54
              WHITESPACE@39..40 " "
              L_BRACKET@40..41 "["
              LOOKUP_EXPR@41..46
                IDENT@41..46 "steps"
              COMMA@46..47 ","
              UNARY_EXPR@47..50
                MINUS@47..49
                  WHITESPACE@47..48 " "
                  MINUS@48..49 "-"
                INTEGER@49..50
                  INTEGER@49..50 "1"
              COMMA@50..51 ","
              INTEGER@51..53
                WHITESPACE@51..52 " "
                INTEGER@52..53 "0"
              R_BRACKET@53..54 "]"
        R_PAREN@54..55 ")"
        IF_CLAUSE@55..81
          WHITESPACE@55..56 " "
          IF_KW@56..58 "if"
          WHITESPACE@58..59 " "
          L_PAREN@59..60 "("
          LOOKUP_EXPR@60..61
            IDENT@60..61 "b"
          R_PAREN@61..62 ")"
          LET_CLAUSE@62..81
            WHITESPACE@62..63 " "
            LET_KW@63..66 "let"
            WHITESPACE@66..67 " "
            L_PAREN@67..68 "("
            ASSIGNMENTS@68..73
              ASSIGNMENT@68..73
                IDENT@68..69 "c"
                WHITESPACE@69..70 " "
                EQUALS@70..71 "="
                LOOKUP_EXPR@71..73
                  WHITESPACE@71..72 " "
                  IDENT@72..73 "d"
            R_PAREN@73..74 ")"
            LIST_EXPR@74..81
              WHITESPACE@74..75 " "
              L_BRACKET@75..76 "["
              LOOKUP_EXPR@76..77
                IDENT@76..77 "a"
              COMMA@77..78 ","
              LOOKUP_EXPR@78..80
                WHITESPACE@78..79 " "
                IDENT@79..80 "f"
              R_BRACKET@80..81 "]"
      WHITESPACE@81..94 "\n            "
      R_BRACKET@94..95 "]"
    ,
)
